<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.login_selector.LoginSelectorActivity">

    <TextView
        android:id="@+id/tv_selector_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_76dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:text="@string/title_selector"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Wakey.BodyLarge.Bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_selector_pic" />

    <ImageView
        android:id="@+id/iv_selector_pic"
        android:layout_width="@dimen/size_340dp"
        android:layout_height="@dimen/size_340dp"
        android:layout_marginTop="@dimen/margin_52dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_selector" />

    <TextView
        android:id="@+id/tv_selector_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/description_selector"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Wakey.BodyMedium.Regular"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_selector_title"
        app:layout_constraintStart_toStartOf="@+id/tv_selector_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_selector_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_80dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_selector_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="@dimen/width_172dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_half_round_gray"
            android:text="@string/label_signup"
            android:textAllCaps="false"
            android:layout_marginStart="-16dp"
            android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/btn_signin"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signin"
            android:layout_width="@dimen/width_172dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_gradient"
            android:text="@string/label_signin"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>