<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/tv_title_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_56dp"
        android:text="@string/title_signup"
        android:textAppearance="@style/TextAppearance.Wakey.BodyLarge.Bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:text="@string/description_signup"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Regular"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_signup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_34dp"
        android:background="@drawable/bg_input_gray"
        android:padding="@dimen/margin_8dp"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description_signup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_email"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_input_email"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:background="@drawable/bg_input_gray"
        android:padding="@dimen/margin_8dp"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_input_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_terms_condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/label_terms_condition"
        android:textAppearance="@style/TextAppearance.Wakey.LabelSmall.Regular"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_38dp"
        android:background="@drawable/bg_button_gradient"
        android:text="@string/label_signup"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_terms_condition" />

    <View
        android:id="@+id/v_divider_1"
        android:layout_width="@dimen/width_130dp"
        android:layout_height="@dimen/height_1dp"
        android:layout_marginTop="@dimen/margin_38dp"
        android:background="@color/white"
        app:layout_constraintEnd_toStartOf="@id/tv_or"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signup" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_or"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/v_divider_1"
        app:layout_constraintEnd_toStartOf="@+id/v_divider_2"
        app:layout_constraintStart_toEndOf="@+id/v_divider_1"
        app:layout_constraintTop_toTopOf="@+id/v_divider_1" />

    <View
        android:id="@+id/v_divider_2"
        android:layout_width="@dimen/width_130dp"
        android:layout_height="@dimen/height_1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/v_divider_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_or"
        app:layout_constraintTop_toTopOf="@+id/v_divider_1" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:background="@drawable/bg_button_border_white"
        android:paddingHorizontal="@dimen/margin_24dp"
        android:paddingVertical="@dimen/margin_13dp"
        app:layout_constraintEnd_toStartOf="@id/ib_google"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        app:srcCompat="@drawable/ic_apple" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_border_white"
        android:paddingHorizontal="@dimen/margin_24dp"
        android:paddingVertical="@dimen/margin_16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ib_apple"
        app:layout_constraintEnd_toStartOf="@id/ib_facebook"
        app:layout_constraintStart_toEndOf="@id/ib_apple"
        app:layout_constraintTop_toTopOf="@+id/ib_apple"
        app:srcCompat="@drawable/ic_google" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_border_white"
        android:paddingHorizontal="@dimen/margin_24dp"
        android:paddingVertical="@dimen/margin_13dp"
        app:layout_constraintBottom_toBottomOf="@+id/ib_apple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ib_google"
        app:layout_constraintTop_toTopOf="@+id/ib_apple"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_facebook" />

    <TextView
        android:id="@+id/tv_label_signup_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_112dp"
        android:text="@string/label_signup_to_login"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Regular"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ib_google" />

</androidx.constraintlayout.widget.ConstraintLayout>